--- a/Lab2/Fitness/Fitness.html
+++ b/Lab2/Fitness/Fitness.html
@@ -1,15 +1,16 @@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <HEAD>
 	<meta charset="UTF-8">
 	<title>Fitness</title>
-	<link href="reset.css" rel="reset">
-	<link href="basicle.css" rel="stylesheet">
+	<link rel="stylesheet" href="reset.css">
+	<link href="Fitness.css" rel="stylesheet">
 </HEAD>
 
 <BODY>
+
+<div class="position">
 
 <div class="title">
 	<header>
@@ -17,17 +18,6 @@
 			<h1>Fitness</h1>
 		</hgroup>
 	</header>
-</div>
-
-<div>
-
-<div class="first">
-<ul>
-		<li><a href="#">Главная</a></li>
-		<li><a href="#">Товары</a></li>
-		<li><a href="#">О нас</a></li>
-		<li><a href="#">Контакты</a></li>
-	</ul>
 </div>
 
 <div class="menu">
@@ -50,19 +40,17 @@
 	</ul>
 </div>
 
-<div class="picture">
-	<p><center><img src="bicycle.jpg" alt="bicycle" title="bicycle!"></center></p>
+<div class="picture article">
+	<p><center><img src="bike2.jpg" alt="bicycle" title="bicycle!"></center></p>
 </div>
-
-<div>
-<div class="article">
 
 <h4>Приветствуем любителей велоспорта любых возрастов!</h4>
 
 <p>В этом интереснейшем разделе нашего сайта вы найдете статьи о велосипедах, бережно собранные и написанные нами. В них отражены все самые необходимые технические знания о велосипедной технике, советы профессионалов из мира велоспорта, интересные факты и множество других занимательных вещей.
 Наша коллекция статей о велосипедах и всем, что с ними связано, постоянно дополняется и дописывается, и мы стремимся к тому, чтобы у вас не осталось вопросов. Но если они все-таки возникают - не стесняйтесь спрашивать, вам всегда ответят!
+В этом интереснейшем разделе нашего сайта вы найдете статьи о велосипедах, бережно собранные и написанные нами. В них отражены все самые необходимые технические знания о велосипедной технике, советы профессионалов из мира велоспорта, интересные факты и множество других занимательных вещей.
+Наша коллекция статей о велосипедах и всем, что с ними связано, постоянно дополняется и дописывается, и мы стремимся к тому, чтобы у вас не осталось вопросов. Но если они все-таки возникают - не стесняйтесь спрашивать, вам всегда ответят!
 </p>
-</div>
 </div>
 
 <div class="menu2">
@@ -71,14 +59,17 @@
 	<li><a href="#">Товары</a></li>
 	<li><a href="#">О нас</a></li>
 	<li><a href="#">Контакты</a></li>
+
+
 </ul>
+<div class="footer">
+    <p>2014 &#169; All rights reserved</p> 
+ 
+</div> 
 </div>
 
-<FOOTER>
-    <p>2014 &#169; </p> 
-    <p align="right">All rights reserved</p>
 
-</FOOTER>
 
+</div>
 </BODY>
 </html>
