--- a/Lab2/Fitness/Sait basicle.html
+++ b/Lab2/Fitness/Sait basicle.html
@@ -4,7 +4,7 @@
 
 <HEAD>
 	<meta charset="UTF-8">
-	<title>Fitness</title>
+	<title> Бутенко Вера Владимировна </title>
 	<link href="reset.css" rel="reset">
 	<link href="basicle.css" rel="stylesheet">
 </HEAD>
@@ -20,16 +20,6 @@
 </div>
 
 <div>
-
-<div class="first">
-<ul>
-		<li><a href="#">Главная</a></li>
-		<li><a href="#">Товары</a></li>
-		<li><a href="#">О нас</a></li>
-		<li><a href="#">Контакты</a></li>
-	</ul>
-</div>
-
 <div class="menu">
 	<ul>
 		<li><a href="#">Главная</a></li>
