mes to homework

--- a/Lab2_fitness/fitness_2.html
+++ b/Lab2_fitness/fitness_2.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<HEAD>
+<head>
     <meta charset="UTF-8">
     <title>Fitness</title>
     <link rel="stylesheet" href="reset.css">
-    <link href="Fitness.css" rel="stylesheet">
-</HEAD>
+    <link href="fitness_2.css" rel="stylesheet">
+</head>
 
-<BODY>
+<body>
 
 <div class="position">
 
@@ -64,5 +64,5 @@
 
 
 </div>
-</BODY>
+</body>
 </html>
