--- a/Lab3_asia/asia_2.html
+++ b/Lab3_asia/asia_2.html
@@ -6,14 +6,14 @@
     <meta name="keywords" content="Азия, путешествая, поездки, бронирование авиабилетов и номеров, оформление документов для выезда и виз">
     <meta name="description" content="Туристическая компания, предоставляет услуги бронирования авиабилетов и номеров, документов для выезда и виз">
     <meta name="author" lang="ru" content="Vera Butenko">
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="css/asia.css">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="./css/asia_2.css">
 </head>
 
 <body>
 <div class="position">
 
-    <ul class="top">
+    <div class="top">
         <div class="hero">
         </div>
 
@@ -56,7 +56,7 @@
         <div class="sea">
             <img src="img/n1.png" alt="blue sea">
         </div>
-    </ul>
+    </div>
     <!-- =========================МЕНЮ======================= -->
     <ul class="menu">
         <li><a href="#">Главная</a></li>
@@ -94,43 +94,64 @@
     </ul>
 
     <!-- +++++++=====контент======================= -->
+     <div fonColumn>
+    <div class="leftColumn">
+       <h3>Информация</h3>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+       <p>Летом отдыхать хорошо.Хочу на море.</p>
+    </div>
+    <div class="content">
+    <div class="centerColumn">
+        <h3>Море</h3>
+         <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+       <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+       <p>Летом отдыхать хорошо.Хочу на море.</p>
+       <p>Летом отдыхать хорошо.Хочу на море.</p>
+    </div>
 
-    <div class="left">
-        <p><h3>Информация</h3></p>
+    <div class="rightColumn">
+        <h3>Новости</h3>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
+        <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
     </div>
-    <divclass="content">
-    <div class="center">
-        <p><h3></h3></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-    </div>
+</div>
 
-    <div class="right">
-        <p><h3>Новости</h3></p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-        <p>Летом отдыхать хорошо.Хочу на море.</p>
-    </div>
+    
 
+</div>
+</div>
 
-    <div class="footer">
+<div class="footer">
         <p>Copyright &#169; asia-holidays.com.2010</p>
     </div>
 
-</div>
-</div>
-</div>
 </body>
 </html>
 
