--- a/Lab4_cadastree-se/cadastre-se_2.html
+++ b/Lab4_cadastree-se/cadastre-se_2.html
@@ -7,13 +7,14 @@
     <meta name="description" content="Туристическая компания, предоставляет услуги бронирования авиабилетов и номеров, документов для выезда и виз">
     <meta name="author" lang="ru" content="Vera Butenko">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/cadastre-se.css">
+    <link rel="stylesheet" href="./css/cadastre-se_2.css">
 </head>
 
 <body>
 <!-- ====================HEADER==================-->
 <div class="top">
     <div class="header">
+
         <ul class="menu_1">
             <li><a  href="#">Mey</a></li>
             <li><a href="#">YouBike</a></li>
@@ -62,7 +63,7 @@
 
                     <form action="index.html" method="get">
                         <fieldset>
-                            <legend>&nbsp OU&nbsp</legend>
+                             <span class="ou"><legend>&nbsp OU&nbsp</legend></span>
                             <input class="first" type="text" name="First Name" placeholder="First Name" required>
 
                             <input class="last" type="text" name="Last Name" placeholder="Last Name" required>
@@ -77,15 +78,14 @@
                             <p class="check"><input type="checkbox" name="name" value="" checked>&nbsp;&nbsp;Send me Youbike updates and tips</p>
 
 
-                            <!--</div> -->
-                            <form class="registration" action="index.html" method="get">
-                                <button type="submit" name="registration">Create my Account</button>
+
 
                         </fieldset>
-                    </form>
-                    <div class="footer">
-                        <p>By clicking the button above, you agree to the Terms of Service</p>
 
+                    <form class="registration" action="index.html" method="get">
+                        <button type="submit" name="registration">Create my Account</button> <div class="footer">
+                    </form>
+                        <p>By clicking the button above, you agree to the Terms of Service</p>
                         <p>Xiew our Privacy Policy</p>
                     </div>
                 </div>
