--- a/Lab5/5_2.html
+++ b/Lab5/5_2.html
@@ -7,7 +7,7 @@
     <meta name="description" content="комплектующие к автомобилю">
     <meta name="author" lang="ru" content="Vera Butenko">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="css/5.css">
+    <link rel="stylesheet" href="../css/5.css">
 </head>
 
 <body>
@@ -48,18 +48,33 @@
         <li><a href="">КОНТАКТЫ</a></li>
     </ul>
 </div>
-</body>
-</html>
-
-
-
-
-
-
-
 
 
 <!-- ====================CONTENT==================-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ===================FOOTER==================-->
+
 </body>
 </html>
 
