хочу спать и что бы все получалос

--- a/Lab5/z.html
+++ b/Lab5/z.html
@@ -6,70 +6,39 @@
     <meta name="keywords" content="шины, детали, опт, розница, акции">
     <meta name="description" content="комплектующие к автомобилю">
     <meta name="author" lang="ru" content="Vera Butenko">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="./css/z.css">
 </head>
 
 <body>
-<!-- ====================HEADER==================-->
-<div class="heder">
+<div class="s_body">
+  <!-- ====================HEADER==================-->
+   <div class="header">
 
      <div class="contacts">
-     	     <img src="./img/tel.png" alt="telephone">
-             <span>(044)123-45-67</span>
-             <span>(044)567-89-10</span>
-             <img src="./img/aut.png" alt="">
-             
-          <div class="registration"> </div>
-
+         <img src="./img/tel.png" alt="telephone">
+         <span>(044)123-45-67</span>
+         <span>(044)567-89-10</span>
      </div>
 
-     <div class="img"></div>
+    <div class="registration">
+        <img src="./img/aut.png" alt="">
+        <form action="#" method="POST"><input type="login" name="логин"placeholder="логин" required></form>
+        <form action="#" method="POST"><input type="password" type="text" name="пароль"placeholder="пароль" required></form>
+        <a href="#">вход</a>
 
-     <div class="menu_1"></div>
+       <div class="line"></div>
 
-</div>
+       <a href="#">регистрация</a>
+   </div>
 
-<!-- ====================CONTENT==================-->
-<div class="content">	
 
-<div class="boxes">
-     <div class="box_1"></div>
 
-     <div class="box_2"></div>
-     
-     <div class="box_3"></div>
-</div>
-
-<div class="s_body">
-
-     <div class="left"></div>
-
-     <div class="center"></div>
-
-     <div class="right"></div>
-</div>
-
-<div class="sprite"></div>
+     </div>
+   </div>
 
 
 
 </div>
-
-<!-- ===================FOOTER==================-->
-
-<div class="footer">
-	
-     <div class="menu_2"></div>
-
-     <div class="copyrite"></div>
-
-</div>
-
-
-
-
-
-
 </body>
 </html>
