--- a/Lab3_asia/asia_2.html
+++ b/Lab3_asia/asia_2.html
@@ -94,8 +94,10 @@
     </ul>
 
     <!-- +++++++=====контент======================= -->
-     <div fonColumn>
-    <div class="leftColumn">
+     
+   
+    <div class="content">
+ <div class="leftColumn">
        <h3>Информация</h3>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
@@ -108,9 +110,8 @@
         <p>Летом отдыхать хорошо.Хочу на море.</p>
        <p>Летом отдыхать хорошо.Хочу на море.</p>
     </div>
-    <div class="content">
     <div class="centerColumn">
-        <h3>Море</h3>
+       <!--  <h3>Море</h3>
          <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
@@ -125,7 +126,7 @@
         <p>Летом отдыхать хорошо.Хочу на море.</p>
         <p>Летом отдыхать хорошо.Хочу на море.</p>
        <p>Летом отдыхать хорошо.Хочу на море.</p>
-       <p>Летом отдыхать хорошо.Хочу на море.</p>
+       <p>Летом отдыхать хорошо.Хочу на море.</p> -->
     </div>
 
     <div class="rightColumn">
@@ -149,7 +150,7 @@
 </div>
 
 <div class="footer">
-        <p>Copyright &#169; asia-holidays.com.2010</p>
+    <p>Copyright &#169; asia-holidays.com.2010</p>
     </div>
 
 </body>
