--- a/Lab5/z.html
+++ b/Lab5/z.html
@@ -7,7 +7,7 @@
     <meta name="description" content="комплектующие к автомобилю">
     <meta name="author" lang="ru" content="Vera Butenko">
     <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="./css/z.css">
+    <link rel="stylesheet" href="css/z.css">
 </head>
 
 <body>
@@ -26,17 +26,202 @@
         <form action="#" method="POST"><input type="login" name="логин"placeholder="логин" required></form>
         <form action="#" method="POST"><input type="password" type="text" name="пароль"placeholder="пароль" required></form>
         <a href="#">вход</a>
+        <!--<div class="line"></div>-->
+        <a href="#">регистрация</a>
 
-       <div class="line"></div>
+        <div class="recovery_password">
+        <a href="#">Забыли пароль?</a>
+        </div>
+    </div>
 
-       <a href="#">регистрация</a>
+    <div class="3_icon">
+        <a href="#"><img src="./img/hom.png" alt=""></a>
+        <a href="#"><img src="./img/int.png" alt=""></a>
+        <a href="#"><img src="./img/em.png" alt=""></a>
+    </div>
+
+       <div class="logo">
+           <img src="img/logo.png" alt="logo">
+       </div>
+
+    <ul class="menu_1">
+        <li><a href="#">О КОМПАНИИ</a></li>
+        <li><a  href="#">ОПЛАТА</a>
+            <ul>
+                <li><a href="#">Налтчный расчет</a></li>
+                <li><a href="#">Безналичный расчет</a></li>
+                <li><a href="#">Оплата частями</a></li>
+                <li><a href="#">Оплата картой</a></li>
+                <li><a href="#">Не хочу платить</a></li>
+            </ul>
+        </li>
+        <li><a href="#">ДОСТАВКА</a></li>
+        <li><a  href="#">СТАТЬИ</a></li>
+        <li><a  href="#">КОНТАКТЫ</a></li>
+    </ul>
+
+       <div class="menu_1_bonus">
+           <img src="./img/korz.png" alt="korz">
+           <p>товаров:</p>
+           <a href="#"></a>
+           <p>на сумму:</p>
+           <a href="#"></a>
+       </div>
+
    </div>
 
+   <div class="s_body_center">
+       <div class="search_for_ cars">
+           <p>Диски:</p>
+           <h3>Поиск по автомобилю</h3>
+           <p>Шины:</p>
+       </div>
+       </div>
+
+       <div class="box_1">
+           <p>Марка авто:</p>
+           <form action="#" method="POST"><input type="auto" name="марка авто" placeholder="марка авто" required></form>
+           <p>Модель автомобиля:</p>
+           <p>Год выпуска автомобиля:</p>
+           <p>Комплектация:</p>
+       </div>
 
 
-     </div>
+
+
+
+       </div>
+
+       <div class="search_tires">
+       </div>
+
+       <div class="disc_search">
+       </div>
    </div>
 
+    <div class="left_menu">
+        <div class="catalog">
+            <img src="./img/dok.png" alt="korz">
+            <p>КАТАЛОГ ПРОДУКЦИИ</p>
+        </div>
+
+        <ul class="bus">
+        <img src="./img/kr.png" alt="kr">
+        <p>ШИНЫ</p>
+            <li><a href="#">Наименование 1</a></li>
+            <li><a  href="#">Наименование 2</a></li>
+            <li><a  href="#">Наименование 3</a></li>
+            <li><a  href="#">Наименование 4</a></li>
+        </ul>
+
+        <ul class="wheels">
+            <img src="./img/kr.png" alt="kr">
+            <p>ДИСКИ</p>
+            <li><a href="#">Наименование 1</a></li>
+            <li><a  href="#">Наименование 2</a></li>
+            <li><a  href="#">Наименование 3</a></li>
+            <li><a  href="#">Наименование 4</a></li>
+        </ul>
+
+
+        <ul class="bolts">
+            <img src="./img/kr.png" alt="kr">
+            <p>БОЛТЫ</p>
+            <li><a href="#">Наименование 1</a></li>
+            <li><a  href="#">Наименование 2</a></li>
+            <li><a  href="#">Наименование 3</a></li>
+            <li><a  href="#">Наименование 4</a></li>
+        </ul>
+    </div>
+
+    <div class="center_menu">
+    </div>
+
+    <div class="right_menu">
+        <div class="brands">
+            <img src="./img/dok.png" alt="korz">
+            <p>БРЕНДЫ</p>
+        </div>
+
+        <div class="bus">
+            <img src="./img/kr.png" alt="kr">
+            <p>ШИНЫ</p>
+            <p class="check"><input type="checkbox" name="name" value="" checked>&nbsp;&nbsp;><a href="#"> Бренд 1 </a></p>
+        </div>
+            <div class="choose">
+                <p class="check"><input type="checkbox" name="name" value="" checked>&nbsp;&nbsp;><a href="#"> Бренд 2 </a></p>
+            </div>
+                <div class="choose">
+                    <p class="check"><input type="checkbox" name="name" value="" checked>&nbsp;&nbsp;><a href="#"> Бренд 3 </a></p>
+                </div>
+                    <div class="choose">
+        </div>
+
+        <div class="wheels">
+            <img src="./img/kr.png" alt="kr">
+            <p>ДИСКИ</p>
+            <p class="check">
+                <input type="checkbox" name="name" value="" checked>
+                <a href="#"> Бренд 1 </a>
+            </p>
+
+                <p class="check">
+                    <label> <input type="checkbox" name="name" value="">Бренд 2</label>
+                </p>
+
+                    <p class="check"><input type="checkbox" name="name" value="" checked>
+                        <a href="#"> Бренд 3 </a>
+                    </p>
+
+
+            <p>ВЫБРАТЬ</p>
+        </div>
+
+    </div>
+
+    <div class="partners">
+        <ul>
+            <li class="1">
+                <img src="./img/toyo.png" alt="">
+            </li>
+            <li class="2">
+                        <img src="./img/rid.png" alt="">
+            </li>
+            <li class="3">
+                <img src="./img/4.png" alt="">
+            </li>
+            <li class="4">
+                <img src="./img/5.png" alt="">
+            </li>
+            <li class="5">
+                <img src="./img/6.png" alt="">
+            </li>
+            <li class="6">
+                <img src="./img/7.png" alt="">
+            </li>
+            <li class="7">
+                <img src="./img/8.png" alt="">
+            </li>
+            <li class="8">
+                <img src="./img/10.png" alt="">
+            </li>
+        </ul>
+
+    </div>
+
+    <div class="footer">
+        <ul class="menu_2">
+            <li><a href="#">О компании</a></li>
+            <li><a  href="#">Доставка</a></li>
+            <li><a href="#">Статьи</a></li>
+            <li><a  href="#">Контакты</a></li>
+        </ul>
+
+        <div class="copyright">
+            <p>Создание айта &#169; Global Vision</p>
+        </div>
+
+    </div>
 
 
 </div>
